# HaoShortLink

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  compose.kafka.yaml  compose.yaml
.github/workflows/: ci.yml
HttpServer/include/http/: HttpRequest.h  HttpResponse.h  HttpServer.h
HttpServer/include/metrics/: HttpMetrics.h
HttpServer/include/router/: Router.h
HttpServer/include/utils/: FileUtil.h  RequestId.h
HttpServer/include/utils/db/: DbConnection.h  DbConnectionPool.h
HttpServer/src/http/: HttpRequest.cpp  HttpServer.cpp
HttpServer/src/metrics/: HttpMetrics.cpp
HttpServer/src/router/: Router.cpp
HttpServer/src/utils/: RequestId.cpp
HttpServer/src/utils/db/: DbConnection.cpp  DbConnectionPool.cpp
apps/shortlink_event_consumer/config/: consumer.conf.example  consumer.container.conf.example
apps/shortlink_event_consumer/include/shortlink/: ConsumerConfig.h  ConsumerMetrics.h  ConsumerObservabilityServer.h  KafkaDeadLetterPublisher.h  MySqlAccessStatisticsWriter.h
apps/shortlink_event_consumer/src/: ConsumerConfig.cpp  ConsumerMetrics.cpp  ConsumerObservabilityServer.cpp  KafkaDeadLetterPublisher.cpp  MySqlAccessStatisticsWriter.cpp  main.cpp
apps/shortlink_server/config/: server.compose.conf.example  server.conf.example  server.container.conf.example  server.kafka.conf.example  server.kafka.container.conf.example  server.kafka.test.container.conf.example
apps/shortlink_server/include/shortlink/: AccessEvent.h  AccessEventPublisher.h  AccessStatistics.h  AccessStatisticsRepository.h  AuthHttp.h  AuthRepository.h  AuthService.h  KafkaAccessEventPublisher.h  MemoryAuthRepository.h  MemoryShortLinkRepository.h  MySqlAccessStatisticsRepository.h  MySqlAuthRepository.h  MySqlShortLinkRepository.h  PasswordHasher.h  RateLimiter.h  RedirectHandler.h  RedisCachedShortLinkRepository.h  RedisFixedWindowRateLimiter.h  RedisShortLinkCache.h  SameOriginPolicy.h  ServerConfig.h  ShortLinkHttpApi.h  ShortLinkMetrics.h  ShortLinkRepository.h  ShortLinkService.h
apps/shortlink_server/sql/: 001_create_short_links.sql  002_make_short_link_code_case_sensitive.sql  003_add_short_link_lifecycle.sql  004_create_access_statistics.sql  005_add_users_sessions_and_ownership.sql
apps/shortlink_server/sql/rollback/: 005_remove_users_sessions_and_ownership.sql
apps/shortlink_server/src/: AccessEvent.cpp  AccessStatistics.cpp  AuthHttp.cpp  AuthRepository.cpp  AuthService.cpp  KafkaAccessEventPublisher.cpp  MemoryAuthRepository.cpp  MemoryShortLinkRepository.cpp  MySqlAccessStatisticsRepository.cpp  MySqlAuthRepository.cpp  MySqlShortLinkRepository.cpp  PasswordHasher.cpp  RedirectHandler.cpp  RedisCachedShortLinkRepository.cpp  RedisFixedWindowRateLimiter.cpp  RedisShortLinkCache.cpp  SameOriginPolicy.cpp  ServerConfig.cpp  ShortLinkHttpApi.cpp  ShortLinkMetrics.cpp  ShortLinkRepository.cpp  ShortLinkService.cpp  main.cpp
apps/shortlink_server/web/: app.css  app.js  index.html
deploy/grafana/dashboards/: hao-shortlink-overview.json
deploy/grafana/provisioning/dashboards/: hao-shortlink.yml
deploy/grafana/provisioning/datasources/: prometheus.yml
deploy/nginx/: default.conf
deploy/prometheus/: prometheus.kafka.yml  prometheus.yml
docs/: ACCESS_EVENT_DESIGN.md  ACCESS_STATISTICS_DESIGN.md  API.md  ARCHITECTURE.md  BENCHMARK.md  BUGS.md  DATA_MODEL.md  DECISIONS.md  DEPLOYMENT.md  FINAL_ACCEPTANCE.md  LIFECYCLE_DESIGN.md  MIDDLEWARE_DESIGN.md  OBSERVABILITY_DESIGN.md  PRODUCT_DESIGN.md  PROJECT_OVERVIEW.md  RELIABILITY_DESIGN.md  ROADMAP.md  RUNBOOK.md  SHORTLINK_REQUIREMENTS.md  TEST_PLAN.md  V2_ACCEPTANCE.md  openapi.yaml
tests/: CMakeLists.txt  minimal_test.cpp
tests/scripts/: access_statistics_dlq_failure_test.sh  access_statistics_mysql_recovery_test.sh  access_statistics_replay_test.sh  api_smoke_test.sh  benchmark_shortlink.sh  kafka_broker_recovery_test.sh  kafka_integration_test.sh  migrate_shortlink_schema.sh  monitoring_smoke_test.sh  mysql_create_concurrency_diagnostic.sh  mysql_readiness_test.sh  mysql_redis_integration_test.sh  openapi_contract_test.sh  rate_limit_nginx_test.sh  rate_limit_test.sh  redis_cache_diagnostic.sh  redis_hiredis_segment_diagnostic.sh  redis_unavailable_fallback_test.sh  run_integration_with_compose.sh  run_kafka_integration_with_compose.sh  schema_migration_test.sh  shortlink_exception_scenarios_test.sh
